Fix sim, Usabilla position, title spacing, Safari gradient (#8522)

--- a/theme/tutorial-sidebar.less
+++ b/theme/tutorial-sidebar.less
@@ -60,7 +60,7 @@
     height: 3rem;
     width: calc(~'100% - 1rem');
     bottom: 6rem;
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), @white);
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), @white);
 }
 
 /*******************************
@@ -144,6 +144,7 @@
     margin-bottom: 1rem;
     font-size: @tutorialTitleFontSize;
     font-weight: 700;
+    line-height: 1.2em;
 }
 
 /*******************************
